--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -60,6 +60,7 @@
                 border-radius: 5px;
                 cursor: pointer;
                 font-weight: 500;
+                border-radius: 50px;
 
                 &:disabled {
                     background-color: #1f8ff19c;
